...
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/buttons_layout"
        android:layout_margin="16dp" />

...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_fibonacci"
                android:backgroundTint="#A1A1A1"
                android:text="F" />
...
                android:layout_margin="12dp"
                android:backgroundTint="#A1A1A1"
                android:id="@+id/button_factorial"
                android:text="!" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_divide"
                android:backgroundTint="#FF9800"
                android:text="/" />
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_7"
                android:text="7" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_8"
                android:text="8" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_9"
                android:text="9" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_multiply"
                android:backgroundTint="#FF9800"
                android:text="*" />
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_4"
                android:text="4" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_5"
                android:text="5" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_6"
                android:text="6" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_plus"
                android:backgroundTint="#FF9800"
                android:text="+" />
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_1"
                android:text="1" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_2"
                android:text="2" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_3"
                android:text="3" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_minus"
                android:backgroundTint="#FF9800"
                android:text="-" />
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_ac"
                android:backgroundTint="#F44336"
                android:text="AC" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_0"
                android:text="0" />
            <com.google.android.material.button.MaterialButton
...
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_equals"
                android:backgroundTint="#FF9800"
                android:text="=" />
...
