...
        android:layout_height="wrap_content"
        android:text="Número de Fibonacci"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text_view"
        android:layout_marginTop="16dp"
        android:hint="Ingrese un número"
        android:inputType="number" />
...
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Calcular"
        android:onClick="calculateFibonacci" />

</RelativeLayout>

